set up new api + lambda router
